Build initial kanji import and export pages

--- a/app/assets/stylesheets/jpstudy/index.scss
+++ b/app/assets/stylesheets/jpstudy/index.scss
@@ -8,6 +8,7 @@
 @import "variables";
 @import "shared";
 @import "words";
+@import "kanji";
 @import "users";
 @import "sessions";
 @import "passwords";
