Add kanji added to user stats page

--- a/app/views/users/stats.html.erb
+++ b/app/views/users/stats.html.erb
@@ -17,6 +17,10 @@
       <% end %>
     </p>
     <p>
+      <strong>Kanji added:</strong>
+      <%= @kanji_aded_count %>
+    </p>
+    <p>
       <strong>Words with cards created:</strong>
       <%= @words_with_cards_created_count %>
     </p>
