--- a/app/assets/stylesheets/jpstudy/kanji.scss
+++ b/app/assets/stylesheets/jpstudy/kanji.scss
@@ -63,7 +63,7 @@
 
 .next-kanji-page {
   .next-kanji {
-    margin-top: 20px;
+    margin-top: 40px;
     text-align: center;
     font-size: 4em;
   }
@@ -78,6 +78,40 @@
       display: inline-block;
       &:not(:last-child) {
         margin-right: 8px;
+      }
+    }
+  }
+  .resources-title {
+    margin-top: 50px;
+    text-align: center;
+  }
+  .resources {
+    display: flex;
+    justify-content: center;
+    a {
+      text-decoration: none;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      &:not(:last-child) {
+        margin-right: 10px;
+      }
+      .resource-name {
+        font-size: 0.7em;
+        color: #9CA3AF;
+      }
+      img {
+        margin-top: 6px;
+        width: 40px;
+        opacity: 0.7;
+      }
+      &:hover {
+        .resource-name {
+          color: #1F2937;
+        }
+        img {
+          opacity: 1;
+        }
       }
     }
   }
