Add next kanji tool instructions

--- a/app/assets/stylesheets/jpstudy/static_pages.scss
+++ b/app/assets/stylesheets/jpstudy/static_pages.scss
@@ -1,5 +1,6 @@
 .about-page,
 .word-list-instructions-page,
+.next-kanji-instructions-page,
 .word-limit-explanation-page,
 .keyboard-shortcuts-page {
   h1.title {
