Add new kanji to user stats

--- a/app/assets/stylesheets/jpstudy/users.scss
+++ b/app/assets/stylesheets/jpstudy/users.scss
@@ -64,6 +64,13 @@
 }
 
 .user-stats-page {
+  .catagory-title {
+    margin: 0px 0px -6px 0px;
+    padding-top: 10px;
+    display: flex;
+    align-content: center;
+    color: #8B5CF6;
+  }
   .contact {
     font-style: italic;
     margin-top: 32px;
