--- a/app/views/users/stats.html.erb
+++ b/app/views/users/stats.html.erb
@@ -6,6 +6,10 @@
   </p>
 
   <div class="stats">
+    <h3 class="catagory-title">
+      Words&nbsp;
+      <%= heroicon "trending-up" %>
+    </h3>
     <p>
       <strong>Total words:</strong>
       <span class="<%= @current_user.has_reached_word_limit? ? "alert-red" : "" %>">
@@ -15,10 +19,6 @@
       <%= link_to(word_limit_path, title: "What is a word limit?") do %>
         <%= heroicon "information-circle", variant: :outline, options: { class: "info-icon" } %>
       <% end %>
-    </p>
-    <p>
-      <strong>Kanji added:</strong>
-      <%= @kanji_aded_count %>
     </p>
     <p>
       <strong>Words with cards created:</strong>
@@ -56,12 +56,24 @@
         <%= distance_of_time_in_words(@days_to_word_target.days) %>
       </p>
     <% end %>
+    <h3 class="catagory-title">
+      Kanji&nbsp;
+      <%= heroicon "trending-up" %>
+    </h3>
+    <p>
+      <strong>Kanji added:</strong>
+      <%= @kanji_aded_count %>
+    </p>
+    <p>
+      <strong>New kanji to add:</strong>
+      <%= @kanji_to_add_count %>
+    </p>
   </div>
 
   <br/>
 
   <div class="actions">
-    <%= link_to "Edit targets", edit_targets_user_path, class: "button-blue" %>
+    <%= link_to "Edit study targets", edit_targets_user_path, class: "button-blue" %>
   </div>
 
   <p class="contact">
