--- a/app/views/static_pages/keyboard_shortcuts.html.erb
+++ b/app/views/static_pages/keyboard_shortcuts.html.erb
@@ -11,12 +11,12 @@
     <li>NAVIGATION:</li>
     <li>w <%= heroicon "arrow-narrow-right" %> word list</li>
     <li>c <%= heroicon "arrow-narrow-right" %> word list + card filters</li>
-    <li>n <%= heroicon "arrow-narrow-right" %> new word form</li>
-    <li>f <%= heroicon "arrow-narrow-right" %> word search</li>
-    <li>s <%= heroicon "arrow-narrow-right" %> word stats</li>
-    <li>e <%= heroicon "arrow-narrow-right" %> word list export tool</li>
-    <li>i <%= heroicon "arrow-narrow-right" %> word list import tool</li>
-    <li>k <%= heroicon "arrow-narrow-right" %> show keyboard shortcuts</li>
+    <li>n <%= heroicon "arrow-narrow-right" %> new word</li>
+    <li>s <%= heroicon "arrow-narrow-right" %> word search</li>
+    <li>t <%= heroicon "arrow-narrow-right" %> user stats</li>
+    <li>k <%= heroicon "arrow-narrow-right" %> next kanji</li>
+    <li>i <%= heroicon "arrow-narrow-right" %> import/export tools</li>
+    <li>h <%= heroicon "arrow-narrow-right" %> keyboard shortcuts help</li>
     <br/>
     <li>BONUS:</li>
     <li>escape <%= heroicon "arrow-narrow-right" %> close flash message or cancel word form</li>
