--- a/app/assets/stylesheets/jpstudy/shared.scss
+++ b/app/assets/stylesheets/jpstudy/shared.scss
@@ -58,6 +58,7 @@ nav {
           flex-direction: row;
           .icon-subtext {
             margin-left: 8px;
+            font-size: 0.8em;
           }
         }
       }
