--- a/app/assets/stylesheets/jpstudy/static_pages.scss
+++ b/app/assets/stylesheets/jpstudy/static_pages.scss
@@ -1,7 +1,7 @@
 .about-page,
 .word-list-instructions-page,
 .next-kanji-instructions-page,
-.word-limit-explanation-page,
+.content-limits-page,
 .keyboard-shortcuts-page {
   h1.title {
     margin: 12px 0px 32px 0px;
