--- a/app/views/users/stats.html.erb
+++ b/app/views/users/stats.html.erb
@@ -16,7 +16,7 @@
         <%= @total_words_created_count %>
       </span>
       <span class="light-gray"> / <%= @current_user.word_limit || "♾️" %></span>
-      <%= link_to(word_limit_path, title: "What is a word limit?") do %>
+      <%= link_to(content_limits_path, title: "What are content limits?") do %>
         <%= heroicon "information-circle", variant: :outline, options: { class: "info-icon" } %>
       <% end %>
     </p>
@@ -61,8 +61,18 @@
       <%= heroicon "trending-up" %>
     </h3>
     <p>
+      <strong>Total kanji:</strong>
+      <span class="<%= @current_user.has_reached_kanji_limit? ? "alert-red" : "" %>">
+        <%= @total_kanji_count %>
+      </span>
+      <span class="light-gray"> / <%= @current_user.kanji_limit || "♾️" %></span>
+      <%= link_to(content_limits_path, title: "What are content limits?") do %>
+        <%= heroicon "information-circle", variant: :outline, options: { class: "info-icon" } %>
+      <% end %>
+    </p>
+    <p>
       <strong>Kanji added:</strong>
-      <%= @kanji_aded_count %>
+      <%= @kanji_added_count %>
     </p>
     <p>
       <strong>New kanji to add:</strong>
