--- a/app/views/static_pages/keyboard_shortcuts.html.erb
+++ b/app/views/static_pages/keyboard_shortcuts.html.erb
@@ -16,6 +16,7 @@
     <li>t <%= heroicon "arrow-narrow-right" %> user stats</li>
     <li>k <%= heroicon "arrow-narrow-right" %> next kanji</li>
     <li>i <%= heroicon "arrow-narrow-right" %> import/export tools</li>
+    <li>e <%= heroicon "arrow-narrow-right" %> import/export tools</li>
     <li>h <%= heroicon "arrow-narrow-right" %> keyboard shortcuts help</li>
     <br/>
     <li>BONUS:</li>
