--- a/app/assets/stylesheets/jpstudy/users.scss
+++ b/app/assets/stylesheets/jpstudy/users.scss
@@ -86,6 +86,14 @@
     font-style: italic;
     margin-top: 32px;
   }
+  .actions {
+    display: flex;
+    flex-wrap: wrap;
+    .button-blue,
+    .button-red {
+      margin: 8px 8px 0px 0px;
+    }
+  }
 }
 
 .in-out-page {
