Update next kanji instructions to match page

--- a/app/views/static_pages/next_kanji_instructions.html.erb
+++ b/app/views/static_pages/next_kanji_instructions.html.erb
@@ -8,11 +8,11 @@
   <h3 class="title">How does this tool work?</h3>
 
   <p>
-    The Next Kanji tool finds new kanji in your word list and allows you to save each kanji  marked as either "skipped" or "added". The new character is coppied to the clipboard when the page loads and you may use the resources linked below the new character to look up definitions.
+    The next kanji tool finds new kanji in your word list and allows you to save each kanji as you study it. To do this you will mark the kanji as either "skipped" or "added" and the page will advance to the next character. Click on the kanji card to quickly copy the character to the clipboard, then use the resources linked below to look up kanji definitions and other cool details.
   </p>
 
   <p>
-    If you already have a list of kanji you've been studying, you can use our <%= link_to "import tool", import_kanji_path %> to pick up right where you left off. Moving on from jpstudy? No worries, simply <%= link_to "export", export_kanji_path %> the kanji you've added on our site.
+    If you already have a list of kanji you've been studying, you can use our <%= link_to "import tool", import_kanji_path %> to pick up right where you left off. Moving on from jpstudy? No worries, simply <%= link_to "export", export_kanji_path %> the kanji you've added on our site before you go.
   </p>
 
   <p class="contact">
