Add copy button and no new kanji message

--- a/app/assets/stylesheets/jpstudy/component_styles.scss
+++ b/app/assets/stylesheets/jpstudy/component_styles.scss
@@ -21,6 +21,7 @@
     cursor: not-allowed;
     background-color: #F3F4F6;
     border-color: #F3F4F6;
+    color: #94a3b8;
   }
 }
 
@@ -32,6 +33,7 @@
   &:disabled {
     background-color: #F87171;
     border-color: #F87171;
+    color: #fff;
   }
 }
 
@@ -43,6 +45,7 @@
   &:disabled {
     background-color: #A78BFA;
     border-color: #A78BFA;
+    color: #fff;
   }
 }
 
@@ -54,6 +57,7 @@
   &:disabled {
     background-color: #F9A8D4;
     border-color: #F9A8D4;
+    color: #fff;
   }
 }
 
@@ -65,6 +69,7 @@
   &:disabled {
     background-color: #60A5FA;
     border-color: #60A5FA;
+    color: #fff;
   }
 }
 
