--- a/app/views/static_pages/next_kanji_instructions.html.erb
+++ b/app/views/static_pages/next_kanji_instructions.html.erb
@@ -8,7 +8,7 @@
   <h3 class="title">How does this tool work?</h3>
 
   <p>
-    The next kanji tool finds new kanji in your word list and allows you to save each kanji as you study it. To do this you will mark the kanji as either "skipped" or "added" and the page will advance to the next character. Click on the kanji card to quickly copy the character to the clipboard, then use the resources linked below to look up kanji definitions and other cool details.
+    The next kanji tool finds new kanji in your word list and allows you to save each kanji as you study it. To do this you will mark the kanji as either "skipped" or "added" and the page will advance to the next character. Click on the clipboard icon in the top right of the kanji card to quickly copy the character to the clipboar or use the resources linked below to look up kanji definitions and other cool info.
   </p>
 
   <p>
