--- a/app/assets/stylesheets/jpstudy/kanji.scss
+++ b/app/assets/stylesheets/jpstudy/kanji.scss
@@ -69,10 +69,16 @@
     display: flex;
     justify-content: center;
     margin: 40px 0px 24px 0px;
+    .no-next-kanji-message {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 93px;
+    }
     .next-kanji-card {
-      cursor: pointer;
-      padding: 12px 28px;
-      width: fit-content;
+      text-align: center;
+      position: relative;
+      padding: 12px 30px;
       // == materialize shadow
       box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
       border-style: solid;
@@ -82,38 +88,23 @@
 
       .character {
         font-size: 4em;
+        margin-right: -2px;
       }
 
-      .tooltiptext {
-        visibility: hidden;
-        opacity: 0;
-        transition: opacity 500ms;
-        transition-delay: 1.5s;
-        margin: -50px 0px 0px -26px;
-        width: 120px;
-        background-color: #374151;
-        color: #fff;
-        text-align: center;
-        padding: 5px 0;
-        border-radius: 6px;
+      .copy-kanji-button {
+        background: none;
+        border: none;
+        padding: 0px;
+        cursor: pointer;
         position: absolute;
-        z-index: 1;
-        &::after {
-          content: "";
-          position: absolute;
-          top: 100%; /* At the bottom of the tooltip */
-          left: 50%;
-          margin-left: -5px;
-          border-width: 5px;
-          border-style: solid;
-          border-color: #374151 transparent transparent transparent;
+        right: 3px;
+        top: 3px;
+        .copy-kanji-icon {
+          color: #d1d5db;
         }
-      }
-
-      &:hover {
-        .tooltiptext {
-          visibility: visible;
-          opacity: 1;
+        .kanji-coppied-icon {
+          color: #10B981;
+          display: none;
         }
       }
     }
