Clean up new kanji message

--- a/app/views/kanji/next.html.erb
+++ b/app/views/kanji/next.html.erb
@@ -19,7 +19,7 @@
       </div>
     <% else %>
       <p class="no-next-kanji-message light-gray">
-        No new kanji to add 🎉!
+        No new kanji to add 🎉
       </p>
     <% end %>
   </div>
