--- a/app/views/static_pages/next_kanji_instructions.html.erb
+++ b/app/views/static_pages/next_kanji_instructions.html.erb
@@ -2,13 +2,13 @@
   <h1 class="title">Next kanji instructions</h1>
 
   <p>
-    The <%= link_to "next kanji", next_kanji_path %> tool is the second major feature we added to jpstudy, and an incredible way to leverage all the data you already created in your <%= link_to "word list", words_path %>!
+    The <%= link_to "next kanji", next_kanji_path %> tool was the second major feature we added to jpstudy, and is an incredible way to leverage all the data you've created in your <%= link_to "word list", words_path %> to learn new kanji as well!
   </p>
 
   <h3 class="title">How does this tool work?</h3>
 
   <p>
-    The next kanji tool finds new kanji in your word list and allows you to save each kanji as you study it. To do this you will mark the kanji as either "skipped" or "added" and the page will advance to the next character. Click on the clipboard icon in the top right of the kanji card to quickly copy the character to the clipboar or use the resources linked below to look up kanji definitions and other cool info.
+    The next kanji tool finds new kanji in your word list and allows you to save each kanji as you make flashcards. To do this you can mark the kanji as either "skipped" or "added" and the page will advance to the next, new character. Click on the clipboard icon in the top right of the kanji card to quickly copy the character to the clipboard and use the resources linked below to look up kanji definitions and other information.
   </p>
 
   <p>
