--- a/app/assets/stylesheets/jpstudy/shared.scss
+++ b/app/assets/stylesheets/jpstudy/shared.scss
@@ -93,7 +93,7 @@ main {
   display: flex;
   width: 100%;
   justify-content: center;
-  min-height: 90vh;
+  min-height: calc(100vh - 100px); // height of both navbars
   .page-content {
     padding: 12px 12px 24px 12px;
     width: 700px;
