Change kanji menu icon

--- a/app/views/application/_main_nav_links.html.erb
+++ b/app/views/application/_main_nav_links.html.erb
@@ -3,7 +3,7 @@
   <small class="icon-subtext">Words</small>
 <% end %>
 <%= link_to(next_kanji_path) do %>
-  <%= heroicon "book-open" %>
+  <%= heroicon "puzzle" %>
   <small class="icon-subtext">Kanji</small>
 <% end %>
 <%= link_to(search_words_path) do %>
